syntax = "proto3";

option java_multiple_files = true;

package core;

service ControllerService {
    rpc registerPool(PoolInfo) returns (Empty);
    rpc uploadFile(FileData) returns (StatusMessage);
}

message Empty {
}

message PoolInfo {
    Endpoint endpoint = 1;
}

message Endpoint {
    string address = 1;
    int32 port = 2;
}

message FileData {
    repeated bytes data = 1;
}

message StatusMessage {
    enum Status {
        OK = 0;
        NOT_OK = 1;
    }
    Status status = 1;
}
